Fixed width overflow by adding overflow clip to css and removed space between icons

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ body{
     background-image: linear-gradient(#070b34,#855988);
     color: white;
     margin: 0;
+    overflow-x: clip;
 }
 div{
 
